# RenderPipelineShaders

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  KnownIssues.md  LICENSE.rtf  LICENSE.txt  README.md  ReleaseNotes.md  build.bat
docs/: faq.md
docs/assets/: .gitattributes
docs/tutorial/: rps_tutorial_intro.md  rps_tutorial_p1.md  rps_tutorial_p2.md  rps_tutorial_p3.md  rps_tutorial_p4.md
examples/: CMakeLists.txt  hello_triangle.cpp  hello_triangle.rpsl  rps_multithreading.cpp  rps_multithreading.rpsl
examples/tmp/: hello_triangle.llvm.bc  hello_triangle.tmp.rps.ll
include/rps/: rps.h
include/rps/core/: rps_api.h  rps_cmd_callback_wrapper.hpp  rps_result.h
include/rps/frontend/: rps_builder.h
src/: CMakeLists.txt
src/core/: rps_core.cpp  rps_core.hpp  rps_device.cpp  rps_device.hpp  rps_graph.cpp  rps_graph.hpp  rps_persistent_index_generator.hpp  rps_result.cpp  rps_util.hpp
src/frontend/: rps_builder.cpp
src/runtime/: rps_cmd_buf.hpp
src/runtime/common/: rps_access.cpp  rps_cmd_buf.hpp  rps_format.cpp  rps_null_runtime_backend.cpp  rps_null_runtime_device.cpp  rps_render_graph.cpp  rps_render_graph.hpp  rps_render_graph_builder.cpp  rps_render_graph_builder.hpp  rps_render_graph_diagnostics.cpp  rps_render_graph_resource.hpp  rps_render_graph_signature.hpp  rps_rpsl_host.c  rps_rpsl_host.cpp  rps_rpsl_host.h  rps_rpsl_host.hpp  rps_rpsl_host_callbacks.c  rps_rpsl_host_callbacks.h  rps_rpsl_host_dll.c  rps_rpsl_host_intrinsics.c  rps_runtime_backend.cpp  rps_runtime_device.cpp  rps_runtime_device.hpp  rps_runtime_util.hpp  rps_subprogram.cpp  rps_subprogram.hpp
src/runtime/d3d11/: rps_d3d11_built_in_nodes.cpp  rps_d3d11_runtime_backend.cpp  rps_d3d11_runtime_backend.hpp  rps_d3d11_runtime_backend_views.cpp  rps_d3d11_runtime_device.cpp  rps_d3d11_runtime_device.hpp  rps_d3d11_util.hpp
src/runtime/d3d12/: rps_d3d12_barrier.hpp  rps_d3d12_built_in_nodes.cpp  rps_d3d12_enhanced_barrier.hpp  rps_d3d12_runtime_backend.cpp  rps_d3d12_runtime_backend.hpp  rps_d3d12_runtime_backend_debug.cpp  rps_d3d12_runtime_backend_views.cpp  rps_d3d12_runtime_device.cpp  rps_d3d12_runtime_device.hpp  rps_d3d12_util.hpp
src/runtime/d3d_common/: rps_d3d_common_util.hpp
src/runtime/vk/: rps_vk_built_in_nodes.cpp  rps_vk_formats.cpp  rps_vk_runtime_backend.cpp  rps_vk_runtime_backend.hpp  (+3 more)
tests/: CMakeLists.txt
tests/console/: CMakeLists.txt  test_builder.cpp  test_builder_c.c  test_cmd_compiler.cpp  test_device.cpp  test_hlsl_intrinsics.cpp  test_hlsl_intrinsics.rpsl  test_rpsl_jit.cpp  test_scheduler.cpp  test_scheduler.rpsl  test_scheduler.rpsl.rs  test_scheduler_intrinsics.cpp  test_scheduler_intrinsics.rpsl  test_utils.cpp
tests/gui/: CMakeLists.txt  test_built_in_nodes.rpsl  test_built_in_nodes_d3d12.cpp  test_built_in_nodes_shared.h  test_built_in_nodes_shared.hpp  test_built_in_nodes_vk.cpp  test_downsample.rpsl  test_downsample_d3d12.cpp  test_downsample_shared.h  test_downsample_shared.hpp  test_downsample_vk.cpp  test_dynamic_graph.rpsl  test_dynamic_graph_d3d12.cpp  test_dynamic_graph_shared.hpp  test_dynamic_graph_vk.cpp  test_mrt_viewport_clear.rpsl  test_mrt_viewport_clear.rpsl.rs  test_mrt_viewport_clear_d3d12.cpp  test_mrt_viewport_clear_shared.h  test_mrt_viewport_clear_shared.hpp  test_mrt_viewport_clear_vk.cpp  test_multi_queue.rpsl  test_multi_queue_d3d12.cpp  test_multi_queue_shared.h  test_multi_queue_shared.hpp  test_multi_queue_vk.cpp  test_multithreading.rpsl  test_multithreading_d3d12.cpp  test_multithreading_shared.h  test_multithreading_shared.hpp  test_multithreading_vk.cpp  test_output_resource.rpsl  test_output_resource_d3d12.cpp  test_output_resource_shared.h  test_output_resource_shared.hpp  test_output_resource_vk.cpp  test_render_to_texture.rpsl  test_render_to_texture_d3d11.cpp  test_render_to_texture_d3d12.cpp  test_render_to_texture_shared.h  (+18 more)
tests/utils/: CMakeLists.txt  rps_test_common.h  rps_test_d3d11_renderer.h  rps_test_d3d11_renderer.hpp  rps_test_d3d12_renderer.h  rps_test_d3d12_renderer.hpp  rps_test_host.h  rps_test_host.hpp  rps_test_linux.hpp  rps_test_vk_renderer.h  rps_test_vk_renderer.hpp  rps_test_win32.h  rps_test_win32.hpp
tools/: CMakeLists.txt  utils.cmake
tools/app_framework/: afx_cmd_parser.h  afx_cmd_parser.hpp  afx_common_helpers.h  afx_common_helpers.hpp  afx_d3d11_renderer.h  afx_d3d11_renderer.hpp  afx_d3d12_renderer.h  afx_d3d12_renderer.hpp  afx_d3d_helper.h  afx_d3d_helper.hpp  afx_renderer.h  afx_renderer.hpp  afx_shader_compiler.h  afx_shader_compiler.hpp  afx_threadpool.h  afx_threadpool.hpp  afx_vk_loader.h  afx_vk_renderer.h  afx_vk_renderer.hpp  afx_win32.h  afx_win32.hpp
tools/cmake_tests/: has_bitscan.c  has_builtin_clz_ctz.c  has_builtin_popcount.c  has_maybe_unused.cpp  has_nodiscard.cpp  has_popcnt.c
tools/rps_hlslc/: .gitattributes  README.md  versions.md
tools/rps_hlslc/rpsl/: rpsl.h
tools/rps_rustc/: README.md
tools/rps_rustc/rps_rs/: Cargo.toml
tools/rps_rustc/rps_rs/macro_utils/: Cargo.toml
tools/rps_rustc/rps_rs/macro_utils/src/: lib.rs
tools/rps_rustc/rps_rs/src/: access.rs  lib.rs  rps_types.rs  rpsl_runtime.rs  support.rs
tools/rps_rustc/rps_rs/tool/cargo_rpslc/: Cargo.toml
tools/rps_rustc/rps_rs/tool/cargo_rpslc/src/: main.rs
tools/rps_visualizer/: CMakeLists.txt  README.md
tools/rps_visualizer/include/: rps_visualizer.h
tools/rps_visualizer/src/: rps_graph_canvas.cpp  rps_graph_canvas.hpp  rps_memory_layout_canvas.cpp  rps_memory_layout_canvas.hpp  rps_overlay_state.cpp  rps_overlay_state.hpp  rps_resource_lifetime_canvas.cpp  rps_resource_lifetime_canvas.hpp  rps_selector_state.hpp  rps_visualizer.cpp  rps_visualizer.hpp  rps_visualizer_common.hpp  rps_visualizer_util.hpp  rps_zoom_state.hpp
tools/rpsl_explorer/: CMakeLists.txt
tools/rpsl_explorer/src/: file_monitor.h  file_monitor.hpp  rpsl_explorer.cpp  rpsl_explorer.h  rpsl_explorer.hpp  rpsl_explorer_dx12_renderer.h  rpsl_explorer_dx12_renderer.hpp  rpsl_explorer_vk_renderer.h  rpsl_explorer_vk_renderer.hpp
tools/shared/: rps_imgui_helpers.hpp
(+20 files in other folders)
